# good-to-know

./: .gitignore  README.md  README.zh-CN.md  RELEASE.md  pyproject.toml
bootstrap/: RUNBOOK.md  stack.yaml
context/naive-context/: SKILL.md  outbox.md  settings.json
discovery/web-discovery/: SKILL.md
memory/mempalace-memory/: SKILL.md  module_lib.py
memory/naive-memory/: SKILL.md
output/feishu-briefing/: settings.json
output/feishu-hard-rules/: settings.json
output/notion-briefing/: settings.json
output/notion-hard-rules/: SKILL.md  settings.json
runs/: README.md
runtime/: __init__.py
runtime/codex-agent-loop/: SKILL.md
runtime/gtn_local_product/: __init__.py  cadence.py  cli.py  configuration.py  hard_rule_config.py  launchd.py  locks.py  models.py  paths.py  prompt_template.md  prompting.py  runner.py  runtime_repo.py  state.py  status_dashboard.py  status_data.py  storage.py
scripts/: install_gtn.sh
tests/: __init__.py
tests/gtn_local_product/: test_cadence.py  test_cli_status.py  test_config_tiers.py  test_hard_rule_cli.py  test_hard_rule_config.py  test_launchd.py  test_locks.py  test_prompting.py  test_runner.py  test_state.py  test_status_dashboard.py  test_status_metrics.py
tests/memory_mempalace/: helpers.py  test_export_findings.py  test_ingest_context.py  test_memory_module.py  test_recall_search.py  test_wakeup_and_status.py
tests/memory_naive/: test_record_user_profile.py
tests/output_feishu/: test_build_feishu_payload.py  test_build_hard_rule_feishu_payload.py  test_publish_feishu_webhook.py
tests/output_notion/: test_build_hard_rule_notion_payload.py  test_build_notion_payload.py
tests/runtime_codex_agent_loop/: test_apply_publish_results.py  test_build_briefing_run_id.py  test_hard_rule_artifacts.py  test_output_builder_resolution.py  (+1 more)
(+55 files in other folders)
